paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2_a/sample_003/target.compile.log
error[E0277]: `main` has invalid return type `i32`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2_a/sample_003/target.rs:8:14
  |
8 | fn main() -> i32 {
  |              ^^^ `main` can only return types that implement `Termination`
  |
  = help: consider using `()`, or a `Result`

warning: unused variable: `pa`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2_a/sample_003/target.rs:14:9
   |
14 |     let pa = a.as_ptr() as *mut i32;
   |         ^^ help: if this is intentional, prefix it with an underscore: `_pa`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.